--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "test": "1.0.0"
   },
   "testables": [
     "com.unity.testframework.graphics"
